--- a/views/update.pug
+++ b/views/update.pug
@@ -1,78 +1,103 @@
 doctype html
 html
   head
-    title= title
+    title Update User
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css")
 
   body
+    nav(class="navbar navbar-expand-lg navbar-dark bg-dark")
+      .container-fluid
+        a(class="navbar-brand" href="/") Home
+        button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation")
+          span(class="navbar-toggler-icon")
+        .collapse.navbar-collapse#navbarNav
+          ul(class="navbar-nav")
+            li(class="nav-item")
+              a(class="nav-link" href="/users/add") ADD
+            li(class="nav-item")
+              a(class="nav-link active" href="/users") DISPLAY
+
     .container.mt-5
-      h1.text-center.mb-4 Update User
+      h1.text-center.mb-4.text-white Update User
 
-      //- Form to update user details
       form(action=`/users/update/${user._id}` method="POST" class="needs-validation" novalidate)
-        
-        //- First Name
-        .mb-3
-          label(for="firstName" class="form-label") First Name
-          input(type="text" name="firstName" value=user.firstName class="form-control" required placeholder="Enter first name")
-          .invalid-feedback Please add your First Name.
+        .row
+          .col-md-6.mb-3
+            label(for="firstName" class="form-label text-white") First Name
+            input(type="text" name="firstName" value=user.firstName class="form-control" required placeholder="Enter first name")
+            .invalid-feedback Please add your First Name.
 
-        //- Last Name
-        .mb-3
-          label(for="lastName" class="form-label") Last Name
-          input(type="text" name="lastName" value=user.lastName class="form-control" required placeholder="Enter last name")
-          .invalid-feedback Please add your Last Name.
+          .col-md-6.mb-3
+            label(for="lastName" class="form-label text-white") Last Name
+            input(type="text" name="lastName" value=user.lastName class="form-control" required placeholder="Enter last name")
+            .invalid-feedback Please add your Last Name.
 
-        //- Date of Birth
-        .mb-3
-          label(for="dob" class="form-label") Date of Birth
-          input(type="date" name="dob" value=user.dob ? user.dob.toLocaleDateString() : '' class="form-control" required)
-          .invalid-feedback Please add your Date of Birth.
+        .row
+          .col-md-6.mb-3
+            label(for="dob" class="form-label text-white") Date of Birth
+            input(type="date" name="dob" value=user.dob ? user.dob.toLocaleDateString() : '' class="form-control" required)
+            .invalid-feedback Please add your Date of Birth.
 
-        //- Address 1
-        .mb-3
-          label(for="address1" class="form-label") Address 1
-          input(type="text" name="address1" value=user.address1 class="form-control" placeholder="Enter address line 1")
-        
-        //- Address 2
-        .mb-3
-          label(for="address2" class="form-label") Address 2
-          input(type="text" name="address2" value=user.address2 class="form-control" placeholder="Enter address line 2 (optional)")
+          .col-md-6.mb-3
+            label(for="address1" class="form-label text-white") Address 1
+            input(type="text" name="address1" value=user.address1 class="form-control" placeholder="Enter address line 1")
 
-        //- City
-        .mb-3
-          label(for="city" class="form-label") City
-          input(type="text" name="city" value=user.city class="form-control" required placeholder="Enter city")
-          .invalid-feedback Please add your city.
+        .row
+          .col-md-6.mb-3
+            label(for="address2" class="form-label text-white") Address 2
+            input(type="text" name="address2" value=user.address2 class="form-control" placeholder="Enter address line 2 (optional)")
 
-        //- Postal Code
-        .mb-3
-          label(for="postalCode" class="form-label") Postal Code
-          input(type="text" name="postalCode" value=user.postalCode class="form-control" required placeholder="Enter postal code")
-          .invalid-feedback Please add your postal code.
+          .col-md-6.mb-3
+            label(for="city" class="form-label text-white") City
+            input(type="text" name="city" value=user.city class="form-control" required placeholder="Enter city")
+            .invalid-feedback Please add your city.
 
-        //- Country
-        .mb-3
-          label(for="country" class="form-label") Country
-          input(type="text" name="country" value=user.country class="form-control" required placeholder="Enter country")
-          .invalid-feedback Please add your country.
+        .row
+          .col-md-6.mb-3
+            label(for="postalCode" class="form-label text-white") Postal Code
+            input(type="text" name="postalCode" value=user.postalCode class="form-control" required placeholder="Enter postal code")
+            .invalid-feedback Please add your postal code.
 
-        //- Phone Number
-        .mb-3
-          label(for="number" class="form-label") Phone Number
-          input(type="text" name="number" value=user.number class="form-control" required pattern="\\d{10}" placeholder="Enter 10-digit phone number")
-          .invalid-feedback Please add a valid phone number.
+          .col-md-6.mb-3
+            label(for="country" class="form-label text-white") Country
+            input(type="text" name="country" value=user.country class="form-control" required placeholder="Enter country")
+            .invalid-feedback Please add your country.
 
-        //- Email
-        .mb-3
-          label(for="email" class="form-label") Email
-          input(type="email" name="email" value=user.email class="form-control" required placeholder="Enter email address")
-          .invalid-feedback Please add a valid email address.
+        .row
+          .col-md-6.mb-3
+            label(for="number" class="form-label text-white") Phone Number
+            input(type="text" name="number" value=user.number class="form-control" required pattern="\\d{10}" placeholder="Enter 10-digit phone number")
+            .invalid-feedback Please add a valid phone number.
 
-        //- User Notes
-        .mb-3
-          label(for="userNotes" class="form-label") Notes
-          input(type="text" name="userNotes" value=user.userNotes class="form-control" placeholder="Add any notes about the user (optional)")
+          .col-md-6.mb-3
+            label(for="email" class="form-label text-white") Email
+            input(type="email" name="email" value=user.email class="form-control" required placeholder="Enter email address")
+            .invalid-feedback Please add a valid email address.
 
-        //- Submit Button
-        button(type="submit" class="btn btn-primary mt-3") Update User
+        .row
+          .col-12.mb-3
+            label(for="userNotes" class="form-label text-white") Notes
+            input(type="text" name="userNotes" value=user.userNotes class="form-control" placeholder="Add any notes about the user (optional)")
+
+        button(type="submit" class="btn btn-primary mt-3 d-block mx-auto") Update User
+
+    style.
+      body {
+        background-color: #000;
+        color: #fff;
+      }
+      .container {
+        background-color: #333;
+        color: #fff;
+      }
+      .form-control {
+        background-color: #222;
+        color: #fff;
+        border: 1px solid #444;
+      }
+      .form-control::placeholder {
+        color: #bbb;
+      }
+      .form-label {
+        color: #fff;
+      }
